# guide-generator

./: README.md  poem.txt  pyproject.toml
output/: 2024vs2025.md  complete_guide.md  guide_outline.json
output/agents/: complete_guide.md  guide_outline.json
output/ai-latest/: advances.md
output/llm-finetuning/: complete_guide.md  guide_outline.json
output/model-alignment/: complete_guide.md  guide_outline.json
output/model-finetuning/: complete_guide.md  guide_outline.json
output/ray-kubeflow/: complete_guide.md  guide_outline.json
src/saad_test/: main.py  main_old.py
src/saad_test/crews/content_crew/: content_crew.py
src/saad_test/crews/content_crew/config/: agents.yaml
src/saad_test/tools/: custom_tool.py
