[project]
name = "saad_test"
version = "0.1.0"
description = "saad-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
]

[project.scripts]
kickoff = "saad_test.main:kickoff"
run_crew = "saad_test.main:kickoff"
plot = "saad_test.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
